@@ -60,6 +60,7 @@ changes to languages because of Bugzilla reports.
 * Uighur (Latin) (ug-latn) was incorrectly marked as right-to-left language.
 
 === Other changes in 1.19 ===
+* jquery.mwPrototypes module was renamed to jquery.mwExtension.
 
 == Compatibility ==
 
